...
                                                </userDefinedRuntimeAttributes>
                                            </textView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BkJ-EG-3bX" customClass="PrimaryButton" customModule="certificates" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="245.33333333333337" width="374" height="34"/>
                                                <state key="normal" title="_Enter"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="LocalizedText" value="Enter"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="savePassphrase" destination="BDX-GA-efs" eventType="touchUpInside" id="Psm-cQ-sWO"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
            </objects>
            <point key="canvasLocation" x="2682.608695652174" y="1254.6195652173915"/>
        </scene>
        <!--New User-->
        <scene sceneID="35f-qu-Nzo">
            <objects>
                <viewController title="New User" id="T7K-XY-0w3" customClass="NewUserViewController" customModule="certificates" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Dxu-0f-vEN">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pHt-mR-CiN">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
...
                                                <connections>
                                                    <action selector="backupCopy" destination="i5s-AP-Aeo" eventType="touchUpInside" id="LkO-Nw-57D"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iB4-IF-EY4" customClass="PrimaryButton" customModule="certificates" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="334" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="continue-button"/>
                                                <state key="normal" title="_Select At Least One to Continue"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="LocalizedText" value="SelectOneButton"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="dismiss" destination="i5s-AP-Aeo" eventType="touchUpInside" id="kJM-w7-bF3"/>
...
                                            </label>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qlN-eo-GeR" userLabel="Passphrase container">
                                                <rect key="frame" x="0.0" y="221.66666666666663" width="374" height="85"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="pass phrase generate electricity dynamo femur shake fries joystick corgi jingle wall sticker sandwich soup pencil coffee" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjusts
                                                        <rect key="frame" x="16" y="12" width="342" height="61"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="passphrase-text"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
                                                <color key="backgroundColor" red="0.92549019607843142" green="0.96078431372549022" blue="0.99607843137254903" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                        <integer key="value" value="7"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ImO-LW-82b" customClass="PrimaryButton" customModule="certificates" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="330.66666666666669" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="manual-backup-done"/>
                                                <state key="normal" title="_Done"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="LocalizedText" value="Done"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="dismiss" destination="i9A-JE-Qz9" eventType="touchUpInside" id="3qt-FE-9EH"/>
...
