...
        switch indexPath.row {
        case 0:
            Logger.main.info("Add Issuer tapped in settings")
            showAddIssuerFlow()
        case 1:
            Logger.main.info("Add Credential tapped in settings")
            let storyboard = UIStoryboard(name: "Settings", bundle: Bundle.main)
            controller = storyboard.instantiateViewController(withIdentifier: "addIssuer") as! AddCredentialViewController
        case 2:
            Logger.main.info("My passphrase tapped in settings")
            authenticate()
            controller = nil
        case 3:
...
